parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AT
    AVG
    BA
    COUNTU
    GT
    GTE
    INTERNAL
    LT
    LTE
    MAX
    MICROSECOND
    MIN
    MINUS
    PLUS
    RECEPTIONTIME
    SLIDING
    STDEV
    SUM
    TUMBLING

Grammar

Rule 0     S' -> cepal_construct
Rule 1     cepal_construct -> global_configurations event_type_definitions process_schema event_distributions
Rule 2     global_configurations -> base_time_granularity time_range optional_resource
Rule 3     base_time_granularity -> BASE_TIME_GRANULARITY EQ NUMBER time_unit
Rule 4     time_range -> START EQ time_val COMMA END EQ time_val
Rule 5     time_val -> NUMBER time_unit
Rule 6     time_val -> NUMBER
Rule 7     time_unit -> MICROSSECOND
Rule 8     time_unit -> SECOND
Rule 9     time_unit -> MINUTE
Rule 10    time_unit -> HOUR
Rule 11    time_unit -> DAY
Rule 12    optional_resource -> RESOURCES TABLES table_resources VARIABLES variables FUNCTIONS custom_functions
Rule 13    table_resources -> ID COMMA table_resources
Rule 14    table_resources -> END TABLES
Rule 15    variables -> value_bound COMMA variables
Rule 16    variables -> END VARIABLES
Rule 17    value_bound -> ID EQ LPAREN values COMMA values RPAREN
Rule 18    values -> NUMBER
Rule 19    values -> LSPAREN numbers RSPAREN
Rule 20    numbers -> numbers COMMA NUMBER
Rule 21    numbers -> NUMBER
Rule 22    custom_functions -> ID COMMA custom_functions
Rule 23    custom_functions -> END FUNCTIONS
Rule 24    event_type_definitions -> event_type_definitions event_type_definition
Rule 25    event_type_definitions -> event_type_definition
Rule 26    event_type_definition -> CREATE EVENTTYPE ID LPAREN EVENTTIME NUMBER COMMA INGESTTIME LPAREN NUMBER RPAREN MAXDELAY LPAREN NUMBER RPAREN COMMA attributes COMMA functional_dependencies RPAREN
Rule 27    functional_dependencies -> source_event_list FA target_event_list
Rule 28    source_event_list -> LPAREN event_list RPAREN
Rule 29    source_event_list -> ID
Rule 30    target_event_list -> LPAREN event_list RPAREN
Rule 31    target_event_list -> ID
Rule 32    target_event_list -> ALL
Rule 33    attributes -> attributes COMMA attribute
Rule 34    attributes -> attribute
Rule 35    attribute -> ID COLON attribute_type
Rule 36    attribute_type -> global_restricted
Rule 37    attribute_type -> table_reference
Rule 38    attribute_type -> event_reference
Rule 39    attribute_type -> raw_value
Rule 40    global_restricted -> IN ID
Rule 41    table_reference -> ID LPAREN table_values RPAREN FOREIGNKEY
Rule 42    table_reference -> ID LPAREN table_values RPAREN
Rule 43    table_values -> table_values COMMA ID
Rule 44    table_values -> ID
Rule 45    event_reference -> INHERIT ID LPAREN event_values RPAREN FOREIGNKEY
Rule 46    event_reference -> INHERIT ID LPAREN event_values RPAREN
Rule 47    event_values -> event_values COMMA ID
Rule 48    event_values -> ID
Rule 49    raw_value -> INTEGER
Rule 50    raw_value -> STRING
Rule 51    raw_value -> FLOAT
Rule 52    raw_value -> CHAR LPAREN NUMBER RPAREN
Rule 53    process_schema -> start_rule rules
Rule 54    start_rule -> ID COLON CAUSE START SEMICOLON target_event
Rule 55    target_event -> ID time_condition count_condition
Rule 56    time_condition -> TIME BETWEEN time_val AND time_val
Rule 57    time_condition -> TIME EXACTLY time_val
Rule 58    time_condition -> empty
Rule 59    count_condition -> COUNT BETWEEN time_val AND time_val
Rule 60    count_condition -> COUNT EXACTLY time_val
Rule 61    count_condition -> empty
Rule 62    rules -> rules causation_rule
Rule 63    rules -> rules termination_rule
Rule 64    rules -> causation_rule
Rule 65    rules -> termination_rule
Rule 66    causation_rule -> ID COLON CAUSE event_list SEMICOLON target_event
Rule 67    event_list -> ID COMMA event_list
Rule 68    event_list -> ID
Rule 69    termination_rule -> TERMINATE ID
Rule 70    termination_rule -> TERMINATE ID SEMICOLON event_list
Rule 71    event_distributions -> count_distribution event_distributions
Rule 72    event_distributions -> time_distribution event_distributions
Rule 73    event_distributions -> END
Rule 74    time_distribution -> CREATE TIME DISTRIBUTION FOR ID LPAREN BASE_TIME_GRANULARITY EQ time_val COMMA distribution_list RPAREN
Rule 75    count_distribution -> CREATE COUNT DISTRIBUTION FOR ID LPAREN distribution_list RPAREN
Rule 76    distribution_list -> distribution COMMA distribution_list
Rule 77    distribution_list -> distribution
Rule 78    distribution -> distribution_range COLON NUMBER
Rule 79    distribution_range -> LSPAREN NUMBER COMMA NUMBER RPAREN
Rule 80    empty -> <empty>

Terminals, with rules where they appear

ALL                  : 32
AND                  : 56 59
AT                   : 
AVG                  : 
BA                   : 
BASE_TIME_GRANULARITY : 3 74
BETWEEN              : 56 59
CAUSE                : 54 66
CHAR                 : 52
COLON                : 35 54 66 78
COMMA                : 4 13 15 17 20 22 26 26 26 33 43 47 67 74 76 79
COUNT                : 59 60 75
COUNTU               : 
CREATE               : 26 74 75
DAY                  : 11
DISTRIBUTION         : 74 75
END                  : 4 14 16 23 73
EQ                   : 3 4 4 17 74
EVENTTIME            : 26
EVENTTYPE            : 26
EXACTLY              : 57 60
FA                   : 27
FLOAT                : 51
FOR                  : 74 75
FOREIGNKEY           : 41 45
FUNCTIONS            : 12 23
GT                   : 
GTE                  : 
HOUR                 : 10
ID                   : 13 17 22 26 29 31 35 40 41 42 43 44 45 46 47 48 54 55 66 67 68 69 70 74 75
IN                   : 40
INGESTTIME           : 26
INHERIT              : 45 46
INTEGER              : 49
INTERNAL             : 
LPAREN               : 17 26 26 26 28 30 41 42 45 46 52 74 75
LSPAREN              : 19 79
LT                   : 
LTE                  : 
MAX                  : 
MAXDELAY             : 26
MICROSECOND          : 
MICROSSECOND         : 7
MIN                  : 
MINUS                : 
MINUTE               : 9
NUMBER               : 3 5 6 18 20 21 26 26 26 52 78 79 79
PLUS                 : 
RECEPTIONTIME        : 
RESOURCES            : 12
RPAREN               : 17 26 26 26 28 30 41 42 45 46 52 74 75 79
RSPAREN              : 19
SECOND               : 8
SEMICOLON            : 54 66 70
SLIDING              : 
START                : 4 54
STDEV                : 
STRING               : 50
SUM                  : 
TABLES               : 12 14
TERMINATE            : 69 70
TIME                 : 56 57 74
TUMBLING             : 
VARIABLES            : 12 16
error                : 

Nonterminals, with rules where they appear

attribute            : 33 34
attribute_type       : 35
attributes           : 26 33
base_time_granularity : 2
causation_rule       : 62 64
cepal_construct      : 0
count_condition      : 55
count_distribution   : 71
custom_functions     : 12 22
distribution         : 76 77
distribution_list    : 74 75 76
distribution_range   : 78
empty                : 58 61
event_distributions  : 1 71 72
event_list           : 28 30 66 67 70
event_reference      : 38
event_type_definition : 24 25
event_type_definitions : 1 24
event_values         : 45 46 47
functional_dependencies : 26
global_configurations : 1
global_restricted    : 36
numbers              : 19 20
optional_resource    : 2
process_schema       : 1
raw_value            : 39
rules                : 53 62 63
source_event_list    : 27
start_rule           : 53
table_reference      : 37
table_resources      : 12 13
table_values         : 41 42 43
target_event         : 54 66
target_event_list    : 27
termination_rule     : 63 65
time_condition       : 55
time_distribution    : 72
time_range           : 2
time_unit            : 3 5
time_val             : 4 4 56 56 57 59 59 60 74
value_bound          : 15
values               : 17 17
variables            : 12 15

Parsing method: LALR

state 0

    (0) S' -> . cepal_construct
    (1) cepal_construct -> . global_configurations event_type_definitions process_schema event_distributions
    (2) global_configurations -> . base_time_granularity time_range optional_resource
    (3) base_time_granularity -> . BASE_TIME_GRANULARITY EQ NUMBER time_unit

    BASE_TIME_GRANULARITY shift and go to state 4

    cepal_construct                shift and go to state 1
    global_configurations          shift and go to state 2
    base_time_granularity          shift and go to state 3

state 1

    (0) S' -> cepal_construct .



state 2

    (1) cepal_construct -> global_configurations . event_type_definitions process_schema event_distributions
    (24) event_type_definitions -> . event_type_definitions event_type_definition
    (25) event_type_definitions -> . event_type_definition
    (26) event_type_definition -> . CREATE EVENTTYPE ID LPAREN EVENTTIME NUMBER COMMA INGESTTIME LPAREN NUMBER RPAREN MAXDELAY LPAREN NUMBER RPAREN COMMA attributes COMMA functional_dependencies RPAREN

    CREATE          shift and go to state 7

    event_type_definitions         shift and go to state 5
    event_type_definition          shift and go to state 6

state 3

    (2) global_configurations -> base_time_granularity . time_range optional_resource
    (4) time_range -> . START EQ time_val COMMA END EQ time_val

    START           shift and go to state 9

    time_range                     shift and go to state 8

state 4

    (3) base_time_granularity -> BASE_TIME_GRANULARITY . EQ NUMBER time_unit

    EQ              shift and go to state 10


state 5

    (1) cepal_construct -> global_configurations event_type_definitions . process_schema event_distributions
    (24) event_type_definitions -> event_type_definitions . event_type_definition
    (53) process_schema -> . start_rule rules
    (26) event_type_definition -> . CREATE EVENTTYPE ID LPAREN EVENTTIME NUMBER COMMA INGESTTIME LPAREN NUMBER RPAREN MAXDELAY LPAREN NUMBER RPAREN COMMA attributes COMMA functional_dependencies RPAREN
    (54) start_rule -> . ID COLON CAUSE START SEMICOLON target_event

    CREATE          shift and go to state 7
    ID              shift and go to state 14

    process_schema                 shift and go to state 11
    event_type_definition          shift and go to state 12
    start_rule                     shift and go to state 13

state 6

    (25) event_type_definitions -> event_type_definition .

    CREATE          reduce using rule 25 (event_type_definitions -> event_type_definition .)
    ID              reduce using rule 25 (event_type_definitions -> event_type_definition .)


state 7

    (26) event_type_definition -> CREATE . EVENTTYPE ID LPAREN EVENTTIME NUMBER COMMA INGESTTIME LPAREN NUMBER RPAREN MAXDELAY LPAREN NUMBER RPAREN COMMA attributes COMMA functional_dependencies RPAREN

    EVENTTYPE       shift and go to state 15


state 8

    (2) global_configurations -> base_time_granularity time_range . optional_resource
    (12) optional_resource -> . RESOURCES TABLES table_resources VARIABLES variables FUNCTIONS custom_functions

    RESOURCES       shift and go to state 17

    optional_resource              shift and go to state 16

state 9

    (4) time_range -> START . EQ time_val COMMA END EQ time_val

    EQ              shift and go to state 18


state 10

    (3) base_time_granularity -> BASE_TIME_GRANULARITY EQ . NUMBER time_unit

    NUMBER          shift and go to state 19


state 11

    (1) cepal_construct -> global_configurations event_type_definitions process_schema . event_distributions
    (71) event_distributions -> . count_distribution event_distributions
    (72) event_distributions -> . time_distribution event_distributions
    (73) event_distributions -> . END
    (75) count_distribution -> . CREATE COUNT DISTRIBUTION FOR ID LPAREN distribution_list RPAREN
    (74) time_distribution -> . CREATE TIME DISTRIBUTION FOR ID LPAREN BASE_TIME_GRANULARITY EQ time_val COMMA distribution_list RPAREN

    END             shift and go to state 23
    CREATE          shift and go to state 24

    event_distributions            shift and go to state 20
    count_distribution             shift and go to state 21
    time_distribution              shift and go to state 22

state 12

    (24) event_type_definitions -> event_type_definitions event_type_definition .

    CREATE          reduce using rule 24 (event_type_definitions -> event_type_definitions event_type_definition .)
    ID              reduce using rule 24 (event_type_definitions -> event_type_definitions event_type_definition .)


state 13

    (53) process_schema -> start_rule . rules
    (62) rules -> . rules causation_rule
    (63) rules -> . rules termination_rule
    (64) rules -> . causation_rule
    (65) rules -> . termination_rule
    (66) causation_rule -> . ID COLON CAUSE event_list SEMICOLON target_event
    (69) termination_rule -> . TERMINATE ID
    (70) termination_rule -> . TERMINATE ID SEMICOLON event_list

    ID              shift and go to state 28
    TERMINATE       shift and go to state 29

    rules                          shift and go to state 25
    causation_rule                 shift and go to state 26
    termination_rule               shift and go to state 27

state 14

    (54) start_rule -> ID . COLON CAUSE START SEMICOLON target_event

    COLON           shift and go to state 30


state 15

    (26) event_type_definition -> CREATE EVENTTYPE . ID LPAREN EVENTTIME NUMBER COMMA INGESTTIME LPAREN NUMBER RPAREN MAXDELAY LPAREN NUMBER RPAREN COMMA attributes COMMA functional_dependencies RPAREN

    ID              shift and go to state 31


state 16

    (2) global_configurations -> base_time_granularity time_range optional_resource .

    CREATE          reduce using rule 2 (global_configurations -> base_time_granularity time_range optional_resource .)


state 17

    (12) optional_resource -> RESOURCES . TABLES table_resources VARIABLES variables FUNCTIONS custom_functions

    TABLES          shift and go to state 32


state 18

    (4) time_range -> START EQ . time_val COMMA END EQ time_val
    (5) time_val -> . NUMBER time_unit
    (6) time_val -> . NUMBER

    NUMBER          shift and go to state 34

    time_val                       shift and go to state 33

state 19

    (3) base_time_granularity -> BASE_TIME_GRANULARITY EQ NUMBER . time_unit
    (7) time_unit -> . MICROSSECOND
    (8) time_unit -> . SECOND
    (9) time_unit -> . MINUTE
    (10) time_unit -> . HOUR
    (11) time_unit -> . DAY

    MICROSSECOND    shift and go to state 36
    SECOND          shift and go to state 37
    MINUTE          shift and go to state 38
    HOUR            shift and go to state 39
    DAY             shift and go to state 40

    time_unit                      shift and go to state 35

state 20

    (1) cepal_construct -> global_configurations event_type_definitions process_schema event_distributions .

    $end            reduce using rule 1 (cepal_construct -> global_configurations event_type_definitions process_schema event_distributions .)


state 21

    (71) event_distributions -> count_distribution . event_distributions
    (71) event_distributions -> . count_distribution event_distributions
    (72) event_distributions -> . time_distribution event_distributions
    (73) event_distributions -> . END
    (75) count_distribution -> . CREATE COUNT DISTRIBUTION FOR ID LPAREN distribution_list RPAREN
    (74) time_distribution -> . CREATE TIME DISTRIBUTION FOR ID LPAREN BASE_TIME_GRANULARITY EQ time_val COMMA distribution_list RPAREN

    END             shift and go to state 23
    CREATE          shift and go to state 24

    count_distribution             shift and go to state 21
    event_distributions            shift and go to state 41
    time_distribution              shift and go to state 22

state 22

    (72) event_distributions -> time_distribution . event_distributions
    (71) event_distributions -> . count_distribution event_distributions
    (72) event_distributions -> . time_distribution event_distributions
    (73) event_distributions -> . END
    (75) count_distribution -> . CREATE COUNT DISTRIBUTION FOR ID LPAREN distribution_list RPAREN
    (74) time_distribution -> . CREATE TIME DISTRIBUTION FOR ID LPAREN BASE_TIME_GRANULARITY EQ time_val COMMA distribution_list RPAREN

    END             shift and go to state 23
    CREATE          shift and go to state 24

    time_distribution              shift and go to state 22
    event_distributions            shift and go to state 42
    count_distribution             shift and go to state 21

state 23

    (73) event_distributions -> END .

    $end            reduce using rule 73 (event_distributions -> END .)


state 24

    (75) count_distribution -> CREATE . COUNT DISTRIBUTION FOR ID LPAREN distribution_list RPAREN
    (74) time_distribution -> CREATE . TIME DISTRIBUTION FOR ID LPAREN BASE_TIME_GRANULARITY EQ time_val COMMA distribution_list RPAREN

    COUNT           shift and go to state 43
    TIME            shift and go to state 44


state 25

    (53) process_schema -> start_rule rules .
    (62) rules -> rules . causation_rule
    (63) rules -> rules . termination_rule
    (66) causation_rule -> . ID COLON CAUSE event_list SEMICOLON target_event
    (69) termination_rule -> . TERMINATE ID
    (70) termination_rule -> . TERMINATE ID SEMICOLON event_list

    END             reduce using rule 53 (process_schema -> start_rule rules .)
    CREATE          reduce using rule 53 (process_schema -> start_rule rules .)
    ID              shift and go to state 28
    TERMINATE       shift and go to state 29

    causation_rule                 shift and go to state 45
    termination_rule               shift and go to state 46

state 26

    (64) rules -> causation_rule .

    ID              reduce using rule 64 (rules -> causation_rule .)
    TERMINATE       reduce using rule 64 (rules -> causation_rule .)
    END             reduce using rule 64 (rules -> causation_rule .)
    CREATE          reduce using rule 64 (rules -> causation_rule .)


state 27

    (65) rules -> termination_rule .

    ID              reduce using rule 65 (rules -> termination_rule .)
    TERMINATE       reduce using rule 65 (rules -> termination_rule .)
    END             reduce using rule 65 (rules -> termination_rule .)
    CREATE          reduce using rule 65 (rules -> termination_rule .)


state 28

    (66) causation_rule -> ID . COLON CAUSE event_list SEMICOLON target_event

    COLON           shift and go to state 47


state 29

    (69) termination_rule -> TERMINATE . ID
    (70) termination_rule -> TERMINATE . ID SEMICOLON event_list

    ID              shift and go to state 48


state 30

    (54) start_rule -> ID COLON . CAUSE START SEMICOLON target_event

    CAUSE           shift and go to state 49


state 31

    (26) event_type_definition -> CREATE EVENTTYPE ID . LPAREN EVENTTIME NUMBER COMMA INGESTTIME LPAREN NUMBER RPAREN MAXDELAY LPAREN NUMBER RPAREN COMMA attributes COMMA functional_dependencies RPAREN

    LPAREN          shift and go to state 50


state 32

    (12) optional_resource -> RESOURCES TABLES . table_resources VARIABLES variables FUNCTIONS custom_functions
    (13) table_resources -> . ID COMMA table_resources
    (14) table_resources -> . END TABLES

    ID              shift and go to state 52
    END             shift and go to state 53

    table_resources                shift and go to state 51

state 33

    (4) time_range -> START EQ time_val . COMMA END EQ time_val

    COMMA           shift and go to state 54


state 34

    (5) time_val -> NUMBER . time_unit
    (6) time_val -> NUMBER .
    (7) time_unit -> . MICROSSECOND
    (8) time_unit -> . SECOND
    (9) time_unit -> . MINUTE
    (10) time_unit -> . HOUR
    (11) time_unit -> . DAY

    COMMA           reduce using rule 6 (time_val -> NUMBER .)
    RESOURCES       reduce using rule 6 (time_val -> NUMBER .)
    AND             reduce using rule 6 (time_val -> NUMBER .)
    COUNT           reduce using rule 6 (time_val -> NUMBER .)
    ID              reduce using rule 6 (time_val -> NUMBER .)
    TERMINATE       reduce using rule 6 (time_val -> NUMBER .)
    END             reduce using rule 6 (time_val -> NUMBER .)
    CREATE          reduce using rule 6 (time_val -> NUMBER .)
    MICROSSECOND    shift and go to state 36
    SECOND          shift and go to state 37
    MINUTE          shift and go to state 38
    HOUR            shift and go to state 39
    DAY             shift and go to state 40

    time_unit                      shift and go to state 55

state 35

    (3) base_time_granularity -> BASE_TIME_GRANULARITY EQ NUMBER time_unit .

    START           reduce using rule 3 (base_time_granularity -> BASE_TIME_GRANULARITY EQ NUMBER time_unit .)


state 36

    (7) time_unit -> MICROSSECOND .

    START           reduce using rule 7 (time_unit -> MICROSSECOND .)
    COMMA           reduce using rule 7 (time_unit -> MICROSSECOND .)
    RESOURCES       reduce using rule 7 (time_unit -> MICROSSECOND .)
    AND             reduce using rule 7 (time_unit -> MICROSSECOND .)
    COUNT           reduce using rule 7 (time_unit -> MICROSSECOND .)
    ID              reduce using rule 7 (time_unit -> MICROSSECOND .)
    TERMINATE       reduce using rule 7 (time_unit -> MICROSSECOND .)
    END             reduce using rule 7 (time_unit -> MICROSSECOND .)
    CREATE          reduce using rule 7 (time_unit -> MICROSSECOND .)


state 37

    (8) time_unit -> SECOND .

    START           reduce using rule 8 (time_unit -> SECOND .)
    COMMA           reduce using rule 8 (time_unit -> SECOND .)
    RESOURCES       reduce using rule 8 (time_unit -> SECOND .)
    AND             reduce using rule 8 (time_unit -> SECOND .)
    COUNT           reduce using rule 8 (time_unit -> SECOND .)
    ID              reduce using rule 8 (time_unit -> SECOND .)
    TERMINATE       reduce using rule 8 (time_unit -> SECOND .)
    END             reduce using rule 8 (time_unit -> SECOND .)
    CREATE          reduce using rule 8 (time_unit -> SECOND .)


state 38

    (9) time_unit -> MINUTE .

    START           reduce using rule 9 (time_unit -> MINUTE .)
    COMMA           reduce using rule 9 (time_unit -> MINUTE .)
    RESOURCES       reduce using rule 9 (time_unit -> MINUTE .)
    AND             reduce using rule 9 (time_unit -> MINUTE .)
    COUNT           reduce using rule 9 (time_unit -> MINUTE .)
    ID              reduce using rule 9 (time_unit -> MINUTE .)
    TERMINATE       reduce using rule 9 (time_unit -> MINUTE .)
    END             reduce using rule 9 (time_unit -> MINUTE .)
    CREATE          reduce using rule 9 (time_unit -> MINUTE .)


state 39

    (10) time_unit -> HOUR .

    START           reduce using rule 10 (time_unit -> HOUR .)
    COMMA           reduce using rule 10 (time_unit -> HOUR .)
    RESOURCES       reduce using rule 10 (time_unit -> HOUR .)
    AND             reduce using rule 10 (time_unit -> HOUR .)
    COUNT           reduce using rule 10 (time_unit -> HOUR .)
    ID              reduce using rule 10 (time_unit -> HOUR .)
    TERMINATE       reduce using rule 10 (time_unit -> HOUR .)
    END             reduce using rule 10 (time_unit -> HOUR .)
    CREATE          reduce using rule 10 (time_unit -> HOUR .)


state 40

    (11) time_unit -> DAY .
